--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -2,8 +2,17 @@ name: Docker build and push
 
 on:
   push:
+    tags: ["v*"]
     branches:
       - 'main'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Version tag for the Docker image (semver)"
+        required: true
+
+env:
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   docker-build-push:
@@ -11,14 +20,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ghcr.io/${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}}${{ github.event_name == 'workflow_dispatch' && format(',value={0}', github.event.inputs.version) || '' }}
+            type=semver,pattern={{major}}.{{minor}}${{ github.event_name == 'workflow_dispatch' && format(',value={0}', github.event.inputs.version) || '' }}
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: linweiyuan
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: linweiyuan/go-chatgpt-api
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
