--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -2,8 +2,17 @@ name: Docker build and push
 
 on:
   push:
+    tags: ["v*"]
     branches:
       - 'main'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Version tag for the Docker image (semver)"
+        required: true
+
+env:
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   docker-build-push:
@@ -16,10 +25,11 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: linweiyuan/go-chatgpt-api
+          images: |
+            ghcr.io/${{ env.IMAGE_NAME }}
           tags: |
-            {{ date 'YYYYMMDDHHmmss' }}
-            latest
+            type=semver,pattern={{version}}${{ github.event_name == 'workflow_dispatch' && format(',value={0}', github.event.inputs.version) || '' }}
+            type=semver,pattern={{major}}.{{minor}}${{ github.event_name == 'workflow_dispatch' && format(',value={0}', github.event.inputs.version) || '' }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -27,11 +37,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
+      - name: Login to gchr.io
         uses: docker/login-action@v2
         with:
-          username: linweiyuan
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
@@ -40,3 +51,6 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
